--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repo:
-- repo: https://github.com/antonbabenko/pre-commit-terraform.git
+- repo: https://github.com/antonbabenko/pre-commit-terraform
   rev: v1.88.4
   hooks:
   - id: terraform_fmt
