--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pre-commit:3.7.0
+        pip install pre-commit
     - name: Cache pre-commit hooks
       uses: actions/cache@v2
       with:
